@@ -223,6 +223,8 @@ Unreleased changes (1.0-dev)
 80. NUTCH-612 - URL filtering was disabled in Generator when invoked
     from Crawl (Susam Pal via ab)
 
+81. NUTCH-601 - Recrawling on existing crawl directory (Susam Pal via ab)
+
 
 Release 0.9 - 2007-04-02
 
